<resources>
    <string name="app_name">Eventos</string>
    <string name="tab_home">Home</string>
    <string name="tab_close">Sair</string>
    <string name="event_thumb_description">Imagem do evento</string>
    <string name="event_date_description">01/01/2020</string>
    <string name="event_title_description">Evento de Teste Padrão</string>
    <string name="event_price_description">R$ 1.559,99</string>
    <string name="event_description">O Patas Dadas estará na Redenção, nesse domingo, com cães para adoção e produtos à venda!\n\nNa ocasião, teremos bottons, bloquinhos e camisetas!\n\nTraga seu Pet, os amigos e o chima, e venha aproveitar esse dia de sol com a gente e com alguns de nossos peludinhos - que estarão prontinhos para ganhar o ♥ de um humano bem legal pra chamar de seu. \n\nAceitaremos todos os tipos de doação:\n- guias e coleiras em bom estado\n- ração (as que mais precisamos no momento são sênior e filhote)\n- roupinhas \n- cobertas \n- remédios dentro do prazo de validade</string>
    <string name="entrada_placeholder">Entrada</string>
    <string name="date_placeholder">Data</string>
    <string name="button_checkin_description">Realizar Checkin</string>
    <string name="name_hint">Digite seu nome</string>
    <string name="email_hint">Digite seu email</string>
    <string name="button_confirm_checkin">Fazer Check-in</string>
    <string name="button_cancel">Cancelar</string>

</resources>