<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorText"
        android:text="@string/button_checkin_description"
        android:textAlignment="center"
        android:textColor="@color/colorDark"
        android:textSize="30sp"
        app:drawableStartCompat="@drawable/ic_add_task_black_24dp" />

    <EditText
        style="@style/CustomEditText"
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="username"
        android:hint="@string/name_hint"
        android:inputType="textEmailAddress" />

    <EditText
        style="@style/CustomEditText"
        android:id="@+id/userEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="email"
        android:fontFamily="sans-serif"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imageButtonCancel"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_tools_size"
            android:background="@color/colorText"
            android:layout_weight="1"
            android:contentDescription="@string/button_cancel"
            app:srcCompat="@drawable/ic_not_interested_black_24dp" />

        <ImageButton
            android:id="@+id/imageButtonConfirm"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_tools_size"
            android:background="@color/colorText"
            android:layout_weight="1"
            android:contentDescription="@string/button_confirm_checkin"
            app:srcCompat="@drawable/ic_check_black_24dp" />
    </LinearLayout>
</LinearLayout>