<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorLight"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView_Evento"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:contentDescription="@string/event_thumb_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_event_white_24dp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView_Evento">

            <TextView
                android:id="@+id/textView_eventDate"
                style="@style/Event_Date_Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/event_date_description"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView_eventTitle"
                style="@style/Title_Style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/event_title_description"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView_eventPrice"
                style="@style/Event_Price_Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/event_price_description"
                android:textAlignment="center" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>