<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorLight">

        <ImageView
            android:id="@+id/imageView_Evento"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="@dimen/textview_margin_top"
            android:contentDescription="@string/event_thumb_description"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_event_white_24dp" />

        <TextView
            android:id="@+id/textView_eventDate"
            style="@style/Event_Date_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginStart="@dimen/textview_margin_start"
            android:layout_marginTop="@dimen/textview_margin_top"
            android:layout_marginEnd="@dimen/textview_margin_start"
            android:text="@string/event_date_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView_Evento" />

        <TextView
            android:id="@+id/textView_eventTitle"
            style="@style/Title_Style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/textview_margin_start"
            android:layout_marginTop="@dimen/textview_margin_top"
            android:layout_marginEnd="@dimen/textview_margin_start"
            android:text="@string/event_title_description"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_eventDate" />

        <TextView
            android:id="@+id/textView_eventPrice"
            style="@style/Event_Price_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginStart="@dimen/textview_margin_start"
            android:layout_marginTop="@dimen/textview_margin_top"
            android:layout_marginEnd="@dimen/textview_margin_start"
            android:text="@string/event_price_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_eventTitle" />

        <TextView
            android:id="@+id/textView_eventDescription"
            style="@style/Title_Style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/textview_margin_start"
            android:layout_marginTop="@dimen/textview_margin_top"
            android:layout_marginEnd="@dimen/textview_margin_start"
            android:text="@string/event_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_eventPrice" />

        <com.google.android.gms.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="@dimen/textview_margin_start"
            android:layout_marginTop="@dimen/textview_margin_top"
            android:layout_marginEnd="@dimen/textview_margin_start"
            android:layout_marginBottom="@dimen/textview_margin_top"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_eventDescription" />

        <ImageButton
            android:id="@+id/imageCheckInButton"
            android:layout_width="@dimen/button_tools_size"
            android:layout_height="@dimen/button_tools_size"
            android:layout_marginStart="@dimen/button_tools_margin"
            android:contentDescription="@string/button_checkin_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView_Evento"
            app:srcCompat="@drawable/ic_add_task_black_24dp" />

        <ImageButton
            android:id="@+id/imageShareButton"
            android:layout_width="@dimen/button_tools_size"
            android:layout_height="@dimen/button_tools_size"
            android:layout_marginStart="@dimen/button_tools_margin"
            android:contentDescription="@string/button_checkin_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageCheckInButton"
            app:srcCompat="@drawable/ic_share_black_24dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>